		constructors deprecated.
	balls3d.Band is no longer a subclass of MutableDouble
	Modifications to tutorial5 and balls3d to make the Edges in the inspectors list
		more useful.  Also removed a vestigial decimalFormat from balls3d.Band
	Entirely eliminated SimpleEdgePortrayal3D.EdgeWrapper
	Made GenericEdgePortrayal3D.getTransform(...) private	
	GenericEdgePortrayal3D and PrimitiveEdgePortrayal3D folded into
		PrimitiveEdgePortrayal3D.  GenericEdgePortrayal3D is deleted.
	SharedGroupPortrayal3D renamed to SharedPortrayal3D to be consistent with the
		wrapper portrayal naming convention.
	LabelledPortrayal3D now uses Text2D again.
	Woims3D visualization look improved.
	Added GUIState.guirandom, a new random number generator just for the GUI and
		visualization.  Flockers modified to demonstrate how it works.
	Removed SimplePortrayal3D.setParentPortrayal() and SimplePortrayal3D.parentPortrayal.
		Added Portrayal3D.setCurrentDisplay(), Portrayal3D.getCurrentDisplay(),
		Portrayal3D.getCurrentGUIState(), SimplePortrayal3D.setCurrentFieldPortrayal(),
		and SimplePortrayal3D().getCurrentFieldPortrayal().  Modified the wrapper
		classes so that they call the appropriate methods on their children.
		Displays and Field Portrayals all call these methods as appropriate.  This
		approach solidifies the assumption that model objects oughtn't be their
		own Portrayal3Ds, though it's not forbidden (but serialization won't work).
		Modified Woims3D demo documentation to explain that it's an example of
		objects serving as their own Portrayal3Ds, but that it's not a good idea.
	All wrapper simple portrayals in 3D have their 'child' variable made private.
	LabelledPortrayal3D.updateSwitch() and CircledPortrayal3D.updateSwitch() made private.
	Bugs in LabelledPortrayal3D which were making the label too tiny
	LabelledPortayal3D now makes labels exactly the same size as SimpleEdgePortrayal3D.
	Modifications to LabelledPortrayal3D's constructors: scale no longer exists	