@@ -2268,3 +2268,4 @@ Version 16
 	Bugs in LabelledPortrayal3D which were making the label too tiny
 	LabelledPortayal3D now makes labels exactly the same size as SimpleEdgePortrayal3D.
 	Modifications to LabelledPortrayal3D's constructors: scale no longer exists	
+	GullCG made public
